// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mappers CPQ (molde compartilhado) > analisador: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-ANALISADOR-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > cobre os 10 serviços que usam o molde padrão 1`] = `
[
  "analisador",
  "conexao",
  "execucao-subestacao",
  "laudo-inspecao",
  "limpeza",
  "projeto-bt",
  "projeto-subestacao",
  "qgbt",
  "rede-mt",
  "spda",
]
`;

exports[`mappers CPQ (molde compartilhado) > conexao: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-CONEXAO-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > execucao-subestacao: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-EXECSE-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > laudo-inspecao: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-LAUDO-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > limpeza: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-LIMPEZA-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > projeto-bt: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-PROJBT-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > projeto-subestacao: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-PROJSE-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > qgbt: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-QGBT-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > rede-mt: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-REDEMT-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;

exports[`mappers CPQ (molde compartilhado) > spda: form validado → marcadores do .docx 1`] = `
{
  "cidadeUf": "Goiânia/GO",
  "clienteNome": "Cliente Golden Ltda",
  "clienteNomeUpper": "CLIENTE GOLDEN LTDA",
  "dataEmissao": "Goiânia, 01 de julho de 2026",
  "formaPagamento": "50% na assinatura e 50% na entrega",
  "itens": [
    {
      "condicao": "na entrega",
      "descricao": "Item principal do escopo",
      "num": 1,
      "valor": "R$ 1.234,56",
    },
    {
      "condicao": "",
      "descricao": "Item incluso (sem preço destacado)",
      "num": 2,
      "valor": "Incluso no escopo",
    },
  ],
  "localAtividade": "Goiânia/GO",
  "objeto": "Objeto de teste do serviço, fixo para o snapshot.",
  "observacoes": [
    {
      "texto": "Observação de teste.",
    },
  ],
  "prazoExecucao": "30 dias corridos",
  "referencia": "GTA-2026-CLIENTEGOLDENLTDA-SPDA-007",
  "tituloProposta": "PROPOSTA TÉCNICA E COMERCIAL — TESTE",
  "validade": "21 de julho de 2026 (20 dias corridos)",
  "valorTotal": "R$ 1.234,56",
  "valorTotalExtenso": "Mil, duzentos e trinta e quatro reais e cinquenta e seis centavos.",
}
`;
